music functionality done

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -184,9 +184,8 @@ dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     //noinspection GradleDynamicVersion
     implementation "com.facebook.react:react-native:+"  // From node_modules
-
+    compile project(':react-native-sound')
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
-    implementation(project(":react-native-community_google-signin"))
     debugImplementation("com.facebook.flipper:flipper:${FLIPPER_VERSION}") {
       exclude group:'com.facebook.fbjni'
     }
