--- a/package.json
+++ b/package.json
@@ -10,9 +10,20 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.4.0",
+    "axios": "^0.19.2",
+    "connected-react-router": "^6.8.0",
     "react": "16.13.1",
     "react-native": "0.63.2",
-    "react-native-google-signin": "^2.1.1"
+    "react-native-google-signin": "^2.1.1",
+    "react-native-sound": "^0.11.0",
+    "react-redux": "^7.2.1",
+    "react-router-native": "^5.2.0",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-immutable-state-invariant": "^2.1.0",
+    "redux-thunk": "^2.3.0",
+    "rn-fetch-blob": "^0.12.0"
   },
   "devDependencies": {
     "@babel/core": "7.11.1",
